--- a/G3D/templates/base.html
+++ b/G3D/templates/base.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Alexandre Lambertini">
-	<meta name="keywords" content="Archviz, Arquitetura, Architecture G3D, Maquete, Eletronica" />
+	<meta name="keywords" content="Archviz, Arquitetura, Architecture G3D, Maquete, Eletronica, Tour 360°, Humanized plants, Rendering, Animations, Internal modeling and external modeling  " />
     
     <title>G3D Maquete Eletrônica</title>
 
